@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Data" {
  *variable: string
  *units: string
  *_data: Data_Data
}

entity "Data_Data" {
  *row: integer <<generated>>
  --
  *values : np.ndarray("f")
  *stations : np.ndarray("U64")
  *latitudes: np.ndarray("f")
  *longitudes: np.ndarray("f")
  *altitudes: np.ndarray("f")
  *start_time: np.ndarray("datetime64[s]" UTC)
  *end_time: np.ndarray("datetime64[s]" UTC)
  *flags: np.ndarray("i4")
  *standard_deviations: np.ndarray("f")
}
note bottom of Data_Data
pyaro.timeseries.Data
numpy Structured Array
duplicate lat/lon/alt from Station
  for performance reasons
end note

enum "Flag" {
  VALID: 0
  INVALID: 1
  BELOW_THRESHOLD: 2
}

entity "Station" {
  *station: str
  --
  *latitude: float
  *longitude: float
  *altitude: float
  *long_name: string
  *country: string
  *url : string_to_documentation
}
note bottom of Station
pyaro.timeseries.Station
Dictionary of stations
end note

' entity "Variable" {
'   *variable: string
'   *units: string
' }
' note right of Variable
' Dictionary
' end note

Data ||..|| Data_Data
Data_Data }o..|| Station
Data_Data }o..|| Flag
' TimeseriesReaderData }o..|| Variable

@enduml
